登录验证,从数据库取出加密后的password和salt和登录时md5+salt之后的密码比对

--- a/db/test.properties
+++ b/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.0
-#Sun Apr 10 15:00:22 CST 2022
-tx_timestamp=149
-modified=yes
+#Sun Apr 10 17:11:43 CST 2022
+tx_timestamp=241
+modified=no
 version=2.6.0
