--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
     runtimeOnly 'org.hsqldb:hsqldb'
 
+// https://mvnrepository.com/artifact/com.github.theborakompanioni/thymeleaf-extras-shiro
+    implementation group: 'com.github.theborakompanioni', name: 'thymeleaf-extras-shiro', version: '2.1.0'
 
 
 }
