--- a/db/test.properties
+++ b/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.0
-#Mon Apr 11 12:58:44 CST 2022
-tx_timestamp=505
-modified=no
+#Mon Apr 11 13:37:29 CST 2022
+tx_timestamp=580
+modified=yes
 version=2.6.0
