--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.shiro/shiro-ehcache
     implementation group: 'org.apache.shiro', name: 'shiro-ehcache', version: '1.9.0'
 
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation('com.alibaba:fastjson:1.2.80')
 
 }
 
