--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:hsql://localhost
 spring.datasource.username=sa
 spring.datasource.password=
+
+spring.redis.port=6379
+spring.redis.host=localhost
+spring.redis.database=0
+
+logging.level.org.springframework.jdbc=debug
