--- a/db/test.properties
+++ b/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.0
-#Tue Apr 12 08:34:31 CST 2022
-tx_timestamp=1110
-modified=yes
+#Tue Apr 12 11:16:09 CST 2022
+tx_timestamp=1410
+modified=no
 version=2.6.0
