--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.com.example.springboot_thymeleaf_shiro=debug
 server.port=8080
 
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:hsql://localhost
+spring.datasource.url=jdbc:hsqldb:hsql://localhost/test
 spring.datasource.username=sa
 spring.datasource.password=
 
